--- a/index.html
+++ b/index.html
@@ -1,73 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+
     <title>Michelle Mason: Software Developer</title>
+
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
 <body>
-  <!--- My header here --->
+  <!-- My header here -->
   <header>
     <section class="wrapper">
       <h1>Michelle Mason</h1>
-      <h2>Software Developer in the Making</h2>
+        <h2>Software Developer in the Making</h2>
     </section>
   </header>
 
-<!--- My main body here, image first --->
+<!-- My main body here, image first -->
   <main class="wrapper">
     <section>
-      <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/46473284_10155991822292336_2080205738382196736_n.jpg?_nc_cat=103&_nc_sid=85a577&_nc_ohc=I6f8LedyNXEAX-jmoAI&_nc_ht=scontent-lax3-1.xx&oh=062e2dbb3d67e478920575346deb31ec&oe=5EEFC3E9" alt="Picture of Michelle" class="michelles pic">
+      <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/46473284_10155991822292336_2080205738382196736_n.jpg?_nc_cat=103&_nc_sid=85a577&_nc_ohc=I6f8LedyNXEAX-jmoAI&_nc_ht=scontent-lax3-1.xx&oh=062e2dbb3d67e478920575346deb31ec&oe=5EEFC3E9" alt="Picture of Michelle">
     </section>
+
   <div class="small"></div>
    <hr>
   <div class ="small"></div>
     <article>
-    <h3> Hello friends!</h3> 
-    <p>My name is Michelle Mason and I currently live in sunny Redondo Beach, California. I'm a software engineering student at Thinkful with a background in public health. My experience in public health and exposure to web development has interested me in:</p>
-    <ul>
-      <li>Creating programs that encourage people to make healthy decisions</li>
-      <li>Producing programs that make health data easily understood by the public</li>
-      <li>Constructing systems that can track and express health information in meaningful ways</li>
-    </ul>
+      <h3> Hello friends!</h3> 
+        <p>My name is Michelle Mason and I currently live in sunny Redondo Beach, California. I'm a software engineering student at Thinkful with a background in public health. My experience in public health and exposure to web development has interested me in:</p>
+        <ul>
+          <li>Creating programs that encourage people to make healthy decisions</li>
+          <li>Producing programs that make health data easily understood by the public</li>
+          <li>Constructing systems that can track and express health information in meaningful ways</li>
+        </ul>
     </article>
   
  <div class="small"></div>
    <hr>
   <div class ="small"></div>
+    
     <article>
-    <h3>A little bit about me</h3>
-    <p>When I finished college with my public health degree, I spent a year working in that industry when I began to feel that my career was missing something. I felt as if I was stagnant and wasn't encountering any growth. I yearned for more challenging situations that would require me to learn and grow. This led me to finding out about code! </p>
+      <h3>A little bit about me</h3>
+        <p>When I finished college with my public health degree, I spent a year working in that industry when I began to feel that my career was missing something. I felt as if I was stagnant and wasn't encountering any growth. I yearned for more challenging situations that would require me to learn and grow. This led me to finding out about code! </p>
 
-    <p>After learning about web development, I spent much of my time reading and studying the career and life in this industry. After months of this research and deciding this is exactly what I needed, I began my journey at <a href="https://www.thinkful.com">Thinkful</a>!</p>
+        <p>After learning about web development, I spent much of my time reading and studying the career and life in this industry. After months of this research and deciding this is exactly what I needed, I began my journey at <a href="https://www.thinkful.com">Thinkful</a>!</p>
 
-    <p>I am beyond excited to learn and grow as a web developer and can't wait to work with a team that pushes each other to grow. I am naturally a people person so I am eager to work with different people to collaborate and create new ideas. Like the old saying goes, two heads are better than one!</p>
+        <p>I am beyond excited to learn and grow as a web developer and can't wait to work with a team that pushes each other to grow. I am naturally a people person so I am eager to work with different people to collaborate and create new ideas. Like the old saying goes, two heads are better than one!</p>
 
-    <p>When I'm not studying or working on code, I love being outside. I am an avid hiker, fisher, and if I had it my way, I would be camping every weekend. Nature and code work together as the loop that brings me joy in my life.</p>
-  </article>
-  <article>
-<div class="small"></div>
-   <hr>
-  <div class ="small"></div>
-    <h3>Get in contact with me</h3>
-    <p>Feel free to reach out to me, I would love to hear from you!</p>
-    <ol>
-      <li><a href="https://www.linkedin.com/in/michelle-mason-37b574157/">LinkedIn</a></li>
-      <li><a href="https://github.com/michellemason">GitHub</a></li>
-      <li><a href="mailto:michellemason95@yahoo.com">Email me</a></li>
-      </ol>
-  </article>
-<div class="small"></div>
+        <p>When I'm not studying or working on code, I love being outside. I am an avid hiker, fisher, and if I had it my way, I would be camping every weekend. Nature and code work together as the loop that brings me joy in my life.</p>
+    </article>
+    <article>
+    <div class="small"></div>
+     <hr>
+    <div class ="small"></div>
+      <h3>Get in contact with me</h3>
+        <p>Feel free to reach out to me, I would love to hear from you!</p>
+          <ol>
+           <li><a href="https://www.linkedin.com/in/michelle-mason-37b574157/">LinkedIn</a></li>
+            <li><a href="https://github.com/michellemason">GitHub</a></li>
+            <li><a href="mailto:michellemason95@yahoo.com">Email me</a></li>
+          </ol>
+    </article>
+    <div class="small"></div>
 </main>
 
-<!---- Footer here! --->
+<!-- Footer here! -->
 <footer>
       <h3>Copyright Thinkful Michelle Mason</h3>
 </footer>
 </body>
-    <script src="script.js"></script>
-
-
 </html>
